clusters/my-cluster/50-dashboard/dashboard-tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: dashboard-tls
  namespace: dashboard
  labels:
    shared-gateway-access: "true"
spec:
  parentRefs:
  - name: shared-gateway
    namespace: infra
  rules:
  - backendRefs:
    - name: my-dashboard-kong-proxy
      port: 443
